--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -42,8 +42,7 @@
         </ul>
       </nav>
       <div class="copyright pull-right">
-        &copy;
-        {{test | date: 'yyyy'}}, made with <i class="material-icons">favorite</i> by
+        &copy;<i class="material-icons">favorite</i> by
         <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
       </div>
     </div>
