--- a/src/app/probe/probe/add-probe-modal-dialog.html
+++ b/src/app/probe/probe/add-probe-modal-dialog.html
@@ -51,7 +51,7 @@
             <label class="col-md-3 col-2 col-form-label">地理位置</label>
 
             <div class="col-md-9 col-9">
-                <app-baidu-map [point]="point" [keywords]="searchText2" [scaleSupported]="false"
+                <app-baidu-map [point]="point"  [scaleSupported]="false"
                                class="container-fluid resizable" style="height:400px;width:100%;padding:0;">
                 </app-baidu-map>
             </div>
