--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,17 @@
-
 <div class="wrapper wrapper-full-page">
-  <div class="page-header login-page header-filter" filter-color="black" style="background-image: url('./assets/img/login.jpg'); background-size: cover; background-position: top center;">
+  <div class="page-header login-page header-filter" filter-color="black"
+       style="background-image: url('./assets/img/login.jpg'); background-size: cover; background-position: top center;">
     <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 ml-auto mr-auto">
-          <form class="form" method="" action="">
+          <form class="form" method="" #loginForm="ngForm">
             <div class="card card-login card-hidden">
               <div class="card-header card-header-rose text-center">
-                <h4 class="card-title">Log in</h4>
-                <div class="social-line">
+                <h4 class="card-title">
+                  <img style="height:50px;" src="/assets/img/logo.svg"/>
+                </h4>
+                <!--<div class="social-line">
                   <a href="#pablo" class="btn btn-just-icon btn-link btn-white">
                     <i class="fa fa-facebook-square"></i>
                   </a>
@@ -19,28 +21,18 @@
                   <a href="#pablo" class="btn btn-just-icon btn-link btn-white">
                     <i class="fa fa-google-plus"></i>
                   </a>
-                </div>
+                </div>-->
               </div>
               <div class="card-body ">
-                <p class="card-description text-center">Or Be Classical</p>
+                <!--<p class="card-description text-center">Or Be Classical</p>-->
                 <span class="bmd-form-group">
                   <div class="input-group">
                     <div class="input-group-prepend">
                       <span class="input-group-text">
-                        <i class="material-icons">face</i>
+                        <i class="material-icons">mail_outline</i>
                       </span>
                     </div>
-                    <input type="text" class="form-control" placeholder="First Name...">
-                  </div>
-                </span>
-                <span class="bmd-form-group">
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="material-icons">email</i>
-                      </span>
-                    </div>
-                    <input type="email" class="form-control" placeholder="Email...">
+                    <input type="email" [(ngModel)]="email" name="email" class="form-control" placeholder="登录邮箱" required>
                   </div>
                 </span>
                 <span class="bmd-form-group">
@@ -50,12 +42,30 @@
                         <i class="material-icons">lock_outline</i>
                       </span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Password...">
+                    <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="登录密码" required>
                   </div>
                 </span>
+                <span class="bmd-form-group">
+                  <div class="input-group">
+                    <div class="form-control chkRem">
+                      <mat-checkbox [(ngModel)]="chkRem" name="chkRem">30天免登录</mat-checkbox>
+                    </div>
+                  </div>
+                </span>
+                <!--<span class="bmd-form-group">-->
+                <!--<div class="input-group">-->
+                <!--<div class="input-group-prepend">-->
+                <!--<span class="input-group-text">-->
+                <!--<i class="material-icons">email</i>-->
+                <!--</span>-->
+                <!--</div>-->
+                <!--<input type="email" class="form-control" placeholder="Email...">-->
+                <!--</div>-->
+                <!--</span>-->
+
               </div>
               <div class="card-footer justify-content-center">
-                <a href="#pablo" class="btn btn-rose btn-link btn-lg">Lets Go</a>
+                <button (click)="login()" mat-button [disabled]="!loginForm.form.valid||!loginForm.form.dirty" class="btn btn-rose">登录</button>
               </div>
             </div>
           </form>
@@ -65,33 +75,33 @@
     <footer class="footer ">
       <div class="container">
         <nav class="pull-left">
-          <ul>
-            <li>
-              <a href="https://www.creative-tim.com">
-                Creative Tim
-              </a>
-            </li>
-            <li>
-              <a href="https://creative-tim.com/about-us">
-                About Us
-              </a>
-            </li>
-            <li>
-              <a href="http://blog.creative-tim.com">
-                Blog
-              </a>
-            </li>
-            <li>
-              <a href="https://www.creative-tim.com/license">
-                Licenses
-              </a>
-            </li>
-          </ul>
+          <!--<ul>-->
+          <!--<li>-->
+          <!--<a href="https://www.creative-tim.com">-->
+          <!--Creative Tim-->
+          <!--</a>-->
+          <!--</li>-->
+          <!--<li>-->
+          <!--<a href="https://creative-tim.com/about-us">-->
+          <!--About Us-->
+          <!--</a>-->
+          <!--</li>-->
+          <!--<li>-->
+          <!--<a href="http://blog.creative-tim.com">-->
+          <!--Blog-->
+          <!--</a>-->
+          <!--</li>-->
+          <!--<li>-->
+          <!--<a href="https://www.creative-tim.com/license">-->
+          <!--Licenses-->
+          <!--</a>-->
+          <!--</li>-->
+          <!--</ul>-->
         </nav>
         <div class="copyright pull-right">
           &copy;
-            {{test | date: 'yyyy'}}, made with <i class="material-icons">favorite</i> by
-          <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+          {{test | date: 'yyyy'}} <i class="material-icons">favorite</i>
+          <a href="https://www.zhiziyun.com" target="_blank">智子云</a>
         </div>
       </div>
     </footer>
